Updated and cleaned R files

--- a/outputs/tables/afd_voteshare_regressions.tex
+++ b/outputs/tables/afd_voteshare_regressions.tex
@@ -1,16 +1,8 @@
-\documentclass[10pt,a4paper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
-\author{Md Mujahedul Islam}
-\begin{document}
 
 % Table created by stargazer v.5.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Tue, Apr 26, 2016 - 4:46:22 PM
+% Date and time: Mi, Apr 27, 2016 - 17:24:06
 \begin{table}[!htbp] \centering 
-  \caption{Determinants of vote for the Alternative for Germany} 
+  \caption{Determinants of the vote share of the Alternative for Germany} 
   \label{AfD_voteshare} 
 \small 
 \begin{tabular}{@{\extracolsep{5pt}}lcccc} 
@@ -58,4 +50,17 @@ Adjusted R$^{2}$ & 0.394 & 0.560 & 0.574 & 0.638 \\
 \textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
 \end{tabular} 
 \end{table} 
-\end{document}
+
+% Table created by stargazer v.5.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
+% Date and time: Mi, Apr 27, 2016 - 17:24:06
+\begin{table}[!htbp] \centering 
+  \caption{Determinants of the vote share of the Alternative for Germany} 
+  \label{AfD_voteshare} 
+\small 
+\begin{tabular}{@{\extracolsep{5pt}} c} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+$2$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table} 
