--- a/outputs/tables/correlation_matrix.tex
+++ b/outputs/tables/correlation_matrix.tex
@@ -1,14 +1,6 @@
-\documentclass[10pt,a4paper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
-\author{Md Mujahedul Islam}
-\begin{document}
 
 % Table created by stargazer v.5.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Tue, Apr 26, 2016 - 6:40:07 PM
+% Date and time: Mi, Apr 27, 2016 - 17:24:00
 \begin{table}[!htbp] \centering 
   \caption{Correlation Matrix} 
   \label{} 
@@ -28,5 +20,3 @@ abitur.ratio & $$-$0.298$ & $$-$0.481$ & $0.227$ & $0.468$ & $0.236$ & $$-$0.021
 \hline \\[-1.8ex] 
 \end{tabular} 
 \end{table} 
-
-\end{document}
