--- a/outputs/tables/summary_statistics.tex
+++ b/outputs/tables/summary_statistics.tex
@@ -1,14 +1,6 @@
-\documentclass[10pt,a4paper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
-\author{Md Mujahedul Islam}
-\begin{document}
 
 % Table created by stargazer v.5.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Tue, Apr 26, 2016 - 6:13:56 PM
+% Date and time: Mi, Apr 27, 2016 - 17:23:54
 \begin{table}[!htbp] \centering 
   \caption{Summary statistics of all variables} 
   \label{} 
@@ -34,4 +26,16 @@ No. of refugees & 94 & 423.266 & 283.213 & 97 & 1,487 \\
 \end{tabular} 
 \end{table} 
 
-\end{document}
+% Table created by stargazer v.5.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
+% Date and time: Mi, Apr 27, 2016 - 17:23:54
+\begin{table}[!htbp] \centering 
+  \caption{Summary statistics of all variables} 
+  \label{} 
+\small 
+\begin{tabular}{@{\extracolsep{5pt}} c} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+$2$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table} 
