--- a/Assignment03.RMD
+++ b/Assignment03.RMD
@@ -1,5 +1,5 @@
 ---
-title: "Assignment 3 - Data Set Generation and First Analysis"
+title: ""What explains the recent electoral success of the AfD in the different administrative districts of Baden-WÃ¼rttemberg, Rhineland-Palatinate, and Saxony-Anhalt? (Dataset Generation and First Analysis of Empirical Findings of the Proposed Topic)"
 author: "Md Mujahedul Islam & Johannes Schulz-Knappe"
 subtitle: "MPP-E1180 - Hertie School of Governance, Spring 2016"
 date: "April 27, 2016"
@@ -52,13 +52,13 @@ rm(possible_dir) # remove possible_dir vector
 
 # Introduction
 
-As proposed in the research proposal of Assignment02, we want to understand the factors that explain the success and rise of AfD in Germany's political landscape. At the three state elections in Bade-Württemberg, Rhineland-Palatinate, and Saxony-Anhalt, the AfD received double digit results from scratch, meaning that it has not been present in the state parliaments before. In Baden-Württemberg (BW), the party received 15.1%, in Rhineland-Palatinate (RP) 12.6%, and in Saxony-Anhalt (SA) even 24.3%, becoming the third strongest party in BW and RP, and the second strongest in SA.
+As proposed in the research proposal of Assignment02, we want to understand the factors that explain the success and rise of AfD in Germany's political landscape. At the three state elections in Bade-WÃ¼rttemberg, Rhineland-Palatinate, and Saxony-Anhalt, the AfD received double digit results from scratch, meaning that it has not been present in the state parliaments before. In Baden-WÃ¼rttemberg (BW), the party received 15.1%, in Rhineland-Palatinate (RP) 12.6%, and in Saxony-Anhalt (SA) even 24.3%, becoming the third strongest party in BW and RP, and the second strongest in SA.
 
 While our initial attempt was to gather data on constituency level, we had to adapt to available data sources. This is why we changed the level of analysis to the administrative districts of the three German states.
 
 Thus, the updated research question is:
 
-*"What explains the recent electoral success of the AfD in the different administrative districts of Baden-Württemberg, Rhineland-Palatinate, and Saxony-Anhalt?"*
+*"What explains the recent electoral success of the AfD in the different administrative districts of Baden-WÃ¼rttemberg, Rhineland-Palatinate, and Saxony-Anhalt?"*
 
 We want to understand which structural factors affect the electoral success of the AfD and whether the characteristics of its voters identified in post-election analyses are reflected in the district level data. Also, we want to find out whether it follows the same patterns as the electoral success of radical right populist parties in the rest of Western Europe
 
@@ -73,7 +73,7 @@ load("Data.Rda")
 
 As stated in the Assignment 2 research proposal, we combine two main data types in order to get our variables.
 
-The first data type is the electoral data provided by the State Offices for Statistics on the last state elections in  Baden-Württemberg, Rhineland-Palatinate, and Saxony-Anhalt. The variables retrieved from these datasets are:
+The first data type is the electoral data provided by the State Offices for Statistics on the last state elections in  Baden-WÃ¼rttemberg, Rhineland-Palatinate, and Saxony-Anhalt. The variables retrieved from these datasets are:
 
 Variable | Name in dataset | Description |
 --------------------|-----------------|-------------------------------|
@@ -96,7 +96,7 @@ IV11 | **n.refugees** | Number of asylum seekers per district |
 
 **Election Data**
 
-Gathering the election data was complicated due to the independence of the Statistical State Offices. Every German state office chooses its own format to provide data online. While we thought about collecting data on all state elections in Germany where the AfD has won seats, we had to limit our efforts to the three states Baden-Württemberg (BW), Rhineland-Palatinate (RP), and Saxony Anhalt (SA) in order to provide a working dataset in the given time frame. However, for the final analysis, we will try to extend our dataset to achieve a greater sample.
+Gathering the election data was complicated due to the independence of the Statistical State Offices. Every German state office chooses its own format to provide data online. While we thought about collecting data on all state elections in Germany where the AfD has won seats, we had to limit our efforts to the three states Baden-WÃ¼rttemberg (BW), Rhineland-Palatinate (RP), and Saxony Anhalt (SA) in order to provide a working dataset in the given time frame. However, for the final analysis, we will try to extend our dataset to achieve a greater sample.
 
 We retrieved district level data on the 2016 and 2011 state elections from the respective websites. While the data was available in separate files for RP and SA, district level data was only available for BW in a combined table that had to be divided in following steps. In total, we gathered five different datasets on the elections.
 
